test/libyul/yulSyntaxTests/for_expr_invalid_5.yul
{
	for {} mload {} {}
}
// ----
// DeclarationError 8198: (10-15): Identifier not found.
// TypeError 1733: (10-15): Expected a value of boolean type "bool" but got "u256"
